[tool.poetry]
name = "k-bnt-15"
version = "1"
description = "[ 한국외대 종합설계 B4-After ] K-BNT-15 관리자 서버"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.62"
sqlalchemy = "^2.0.1"
mysqlclient = "^2.1.1"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"

[tool.poetry.group.linter.dependencies]
pre-commit = "^2.21.0"
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.4"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
py_version = 311
skip = ["__init__.py"]
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
